--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "appfigures-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "Appfigures node.js client",
+  "author": "Small Town Heroes <hello@smalltownheroes.be>",
+  "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require test/index.js",
+    "lint": "eslint lib/** test/**"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "request": "^2.74.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "chai": "^3.5.0",
+    "eslint": "^3.4.0",
+    "mocha": "^3.0.2"
   }
 }
